--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ argh = "0.1.12"
 lazy_static = "1.5.0"
 pest = "2.7.10"
 pest_consume = "1.1.3"
+pretty = { version = "0.12.3", features = ["termcolor"] }
