--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 argh = "0.1.12"
+babble = { git = "https://github.com/sgpthomas/babble.git" }
+egg = { git = "https://github.com/egraphs-good/egg.git" }
+env_logger = "0.11.3"
 lazy_static = "1.5.0"
+log = "0.4.22"
 pest = "2.7.10"
 pest_consume = "1.1.3"
 pretty = { version = "0.12.3", features = ["termcolor"] }
