--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow = "1.0.86"
 argh = "0.1.12"
 babble = { git = "https://github.com/sgpthomas/babble.git" }
+derive-deftly = "0.14.1"
 egg = { git = "https://github.com/egraphs-good/egg.git" }
 env_logger = "0.11.3"
 lazy_static = "1.5.0"
