--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,11 @@ babble = { git = "https://github.com/sgpthomas/babble.git" }
 derive-deftly = "0.14.1"
 egg = { git = "https://github.com/egraphs-good/egg.git" }
 env_logger = "0.11.3"
+itertools = "0.13.0"
 lazy_static = "1.5.0"
 log = "0.4.22"
 pest = "2.7.10"
 pest_consume = "1.1.3"
 pretty = { version = "0.12.3", features = ["termcolor"] }
+serde = "1.0.204"
+serde_json = "1.0.121"
