--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ pest_consume = "1.1.3"
 pretty = { version = "0.12.3", features = ["termcolor"] }
 serde = "1.0.204"
 serde_json = "1.0.121"
+
+[dependencies.derive_more]
+version = "1.0.0"
+features = ["from_str"]
