--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ argh = "0.1.12"
 # babble = { git = "https://github.com/sgpthomas/babble.git" }
 babble = { path = "../babble" }
 derive-deftly = "0.14.1"
-egg = { git = "https://github.com/egraphs-good/egg.git" }
+egg = { git = "https://github.com/egraphs-good/egg.git", features = ["serde-1"] }
 env_logger = "0.11.3"
 itertools = "0.13.0"
 lazy_static = "1.5.0"
