--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Format
+name: Test
 
 on:
   push:
@@ -10,18 +10,16 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  format:
+  test:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
     - name: Install Stable Rust
       uses: dtolnay/rust-toolchain@stable
-      with:
-        components: clippy, rustfmt
 
     - uses: Swatinem/rust-cache@v2
-    - name: Format
-      run: cargo fmt --all -- --check
-    - name: Clippy
-      run: cargo clippy --all -- --deny warnings
+    - name: Test
+      env:
+        CI: true
+      run: cargo test
