--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ serde_json = "1.0.127"
 
 [dependencies.derive_more]
 version = "1.0.0"
-features = ["from_str", "display", "debug"]
+features = ["from_str"]
 
 [dev-dependencies]
 insta = "1.39.0"
