--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,18 +22,21 @@ babble = { git = "https://github.com/sgpthomas/babble.git" }
 derive-deftly = "0.14.2"
 egg = { git = "https://github.com/egraphs-good/egg.git", features = ["serde-1"] }
 env_logger = "0.11.5"
+indicatif = { version = "0.17.8", features = ["rayon"] }
 itertools = "0.13.0"
 lazy_static = "1.5.0"
 log = "0.4.22"
 pest = "2.7.11"
 pest_consume = "1.1.3"
 pretty = { version = "0.12.3", features = ["termcolor"] }
+rayon = "1.10.0"
 serde = "1.0.209"
 serde_json = "1.0.127"
+smallvec = "1.13.2"
 
 [dependencies.derive_more]
 version = "1.0.0"
-features = ["from_str"]
+features = ["from_str", "display", "debug"]
 
 [dev-dependencies]
 insta = "1.39.0"
