--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ name = "flexible-isa"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+pb = []
+default = ["pb"]
+
 [lib]
 name = "flexible_isa"
 path = "src/lib.rs"
@@ -18,8 +22,9 @@ path = "src/main.rs"
 anyhow = "1.0.86"
 argh = "0.1.12"
 babble = { git = "https://github.com/sgpthomas/babble.git" }
-closure = "0.3.0"
+bon = "2.2.1"
 # babble = { path = "../babble" }
+closure = "0.3.0"
 derive-deftly = "0.14.2"
 egg = { git = "https://github.com/egraphs-good/egg.git", features = ["serde-1"] }
 env_logger = "0.11.5"
